resources/kubernetes/msr-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stt-observability
  name: stt-observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stt-observability
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: stt-observability
    spec:
      imagePullSecrets:
        - name: regcred
      serviceAccountName: observability-sa 
      containers:
        - image: ghcr.io/staillanibm/msr-observability:latest 
          name: msr
          volumeMounts:
            - name: application-properties
              mountPath: /opt/softwareag/IntegrationServer/application.properties
              subPath:   application.properties
              readOnly:  true
            - name: secrets
              mountPath: /etc/secrets
          readinessProbe:
            tcpSocket:
              port: 5555
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 18
          livenessProbe:
            tcpSocket:
              port: 5555
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
            limits:
              cpu: 1000m
              memory: 2000Mi
      volumes:
        - name: application-properties
          configMap:
            name: stt-observability
            items:
            - key:  application.properties
              path: application.properties
        - name: secrets
          secret:
            secretName: stt-observability
      imagePullSecrets:
        - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: stt-observability
  labels:
    name: stt-observability
    app: stt-observability
    product: msr
    monitoring: enabled
spec:
  selector:
    app: stt-observability
  type: ClusterIP
  sessionAffinity: ClientIP
  ports:
  - port: 5555
    targetPort: 5555
    name: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stt-observability
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "observability.sttlab.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: stt-observability
            port: 
              number: 5555
  tls:
  - hosts: 
    - observability.sttlab.local
    secretName: tls-cert
